  * debian/mythtv-setup.desktop:
    - Set to a real icon.
  * Set up some symlinks for the dejavu fonts so they aren't installed several
    times.
  * debian/rules:
    - Remove references to firewire_tester.  We're not building it.
  * Simplify upstart script a bit.
  * Drop old logic for checking that ~mythtv/.mythtv/mysql.txt exists, and move
    it into the postinst.

  [ Dave Walker ]
    * Incremeted to new upstream version to current trunk head.
    * Replaced sysv style init script with Upstart.
      - debian/control: Bump build-dependency on debhelper for Upstart-aware
        dh_installinit (debhelper >=7). 
      - debian/mythtv-backend.upstart added.
    * Standards-Version bumped to 3.8.2.

 -- Dave Walker (Daviey) <DaveWalker@ubuntu.com>  Sat, 10 Oct 2009 11:26:14 +0100

mythtv (0.22.0~trunk22304-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22304)
    - Fixes crash during image loading of mythfrontend (LP: #445173)
    - Disables pulseaudio harder, fixing sound playback when it's installed.
      (LP: #436792)
  * debian/mythtv_0.22.0.sql:
    - Set Internal as the default player across the board.  Looks like some
      areas were previously missed.  This only affects new installs.
      (LP: #445984)
  * debian/patches/10_mythfilldatabase_log.dpatch:
    - Update to actually log to a file not a directory.
  * debian/patches:
    - Drop any patches that weren't actually being applied.
  * Set default theme to Mythbuntu rather than Mythbuntu-9.10 since upstream
    accepted it without a version number applied.
  * debian/mythtv-database.{postinst,config}:
    - Use the debian system maintainer account to set things up if possible.
    - Drop broken logic for trying to detect when slow writes are needed.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 07 Oct 2009 23:24:05 -0500

mythtv (0.22.0~trunk22242-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22242)
    - Fixes protocol mismatch in 22167 (LP: #440807)