@@ -1,0 +1,4 @@
+mythbuntu = {
+	'impl' : 'launchpad',
+	'product' : 'mythbuntu',
+}
