@@ -158,6 +158,8 @@ install: build
 	dh_install -pmythtv-common   debian/dialog_functions.sh usr/share/mythtv
 	dh_install -pmythtv-common   contrib/config_files/config.xml usr/share/mythtv
 	dh_install -pmythtv-common debian/mysql.txt.dist debian/myth-halt.sh debian/myth-reboot.sh debian/myth-hibernate.sh usr/share/mythtv
+	dh_install -pmythtv-common debian/mythbuntu-crashdb.conf etc/apport/crashdb.conf.d
+	dh_install -pmythtv-common debian/source_mythtv.py usr/share/apport/package-hooks
 
 	$(MAKE) install INSTALL_ROOT=$(CURDIR)/debian/mythtv
 	mv debian/mythtv/usr/bin/mythfrontend debian/mythtv/usr/bin/mythfrontend.real
